# activematter-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  batch_rust.sh  compile_and_export.sh  dump.txt  extract_data.py  plot_data.py
src/: main.rs  params.rs  utils.rs
